--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
+  "name": "@bokoness/clapway",
+  "version": "1.0.1",
+  "description": "A simple package to communicate with Clapway",
+  "main": "clapway.js",
   "dependencies": {
-    "@bokoness/clapway": "^1.0.0",
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+      "axios": "^0.21.1"
   },
-  "version": "1.0.1"
+  "devDependencies": {},
+  "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+      "type": "git",
+      "url": "git+https://github.com/Bokoness/clapwayNodeLibrary.git"
+  },
+  "author": "bokoness",
+  "license": "ISC",
+  "bugs": {
+      "url": "https://github.com/Bokoness/clapwayNodeLibrary/issues"
+  },
+  "homepage": "https://github.com/Bokoness/clapwayNodeLibrary#readme"
 }
